--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 # Core
 streamlit==1.31.0
-pandas==2.1.4
-numpy==1.26.2
+pandas==2.2.2
+numpy==2.1.3
 
 # Machine Learning
 scikit-learn==1.3.2
 xgboost==2.0.3
-lightgbm==4.1.0
+lightgbm==4.2.0
 shap==0.44.0
 
 # Visualisation
@@ -16,7 +16,6 @@ seaborn==0.13.0
 
 # Data Processing
 beautifulsoup4==4.12.2
-lxml==4.9.3
 requests==2.31.0
 
 # Testing
@@ -24,7 +23,7 @@ pytest==7.4.3
 pytest-cov==4.1.0
 pytest-mock==3.12.0
 
-# Utilitaires
+# Utilities
 python-dateutil==2.8.2
 openpyxl==3.1.2
 joblib==1.3.2
