--- a/requirements.txt
+++ b/requirements.txt
@@ -27,3 +27,6 @@ pytest-mock==3.12.0
 python-dateutil==2.8.2
 openpyxl==3.1.2
 joblib==1.3.2
+
+# Required for Plotly LOWESS trendline
+statsmodels==0.14.1
