--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ plotly==5.18.0
 matplotlib==3.8.2
 seaborn==0.13.0
 
+# FIX: Downgrade scipy et statsmodels pour compatibilité
+scipy==1.11.4
+
 # Data Processing
 beautifulsoup4==4.12.2
 requests==2.31.0
