--- a/requirements.txt
+++ b/requirements.txt
@@ -14,8 +14,7 @@ plotly==5.18.0
 matplotlib==3.8.2
 seaborn==0.13.0
 
-# FIX: Downgrade scipy et statsmodels pour compatibilité
-scipy==1.11.4
+
 
 # Data Processing
 beautifulsoup4==4.12.2
@@ -33,4 +32,9 @@ joblib==1.3.2
 
 # Required for Plotly LOWESS trendline
 statsmodels==0.14.1
+
+# FIX: Force versions compatibles avec Streamlit
 rich==13.7.1
+markdown-it-py==3.0.0
+mdurl==0.1.2
+pygments==2.19.2
